add more comments to the pre-processor script.

--- a/pre-processor.ipynb
+++ b/pre-processor.ipynb
@@ -164,11 +164,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_daily_national_data(data_dir, filename, country_mask):\n",
+    "def load_daily_national_data(data_dir, filename, country_mask, input_var, output_var):\n",
     "\n",
     "    \"\"\"\n",
     "    Args:\n",
@@ -178,13 +178,18 @@
     "        filename (str): The filename of a .netcdf file\n",
     "            e.g. 'ERA5_1979_01.nc'\n",
     "            \n",
-    "        variable u: u10 or u100\n",
+    "        country_mask\n",
     "        \n",
-    "        variable v: v10 or v100\n",
-    "\n",
+    "        input_var: LIST of variables you want as inputs. Make sure they ar present in the dataset you are sending to the function\n",
+    "        \n",
+    "        output_var: single string of the output variable of interest. Options are t2m, wind10, wind100 (wind is calculated below from u and v)\n",
+    "    \n",
     "    Returns:\n",
     "\n",
-    "        Dataframe with time series \n",
+    "        You have the choice to either compute just the input df, just the output df or both\n",
+    "        by commenting/ uncommenting accordingly\n",
+    "        Dataframe X (input) with time series of averaged over daily values\n",
+    "        Dataframe Y (output) with the hourly values stored in columns\n",
     "        \n",
     "    \"\"\"\n",
     "    \n",
@@ -193,11 +198,10 @@
     "    columns = dataset.variables.keys()\n",
     "    dataset.close()\n",
     "    \n",
-    "    independent_vars = ['time', 'latitude', 'longitude']\n",
-    "    columns = [i for i in columns if i not in independent_vars]\n",
-    "            \n",
+    "    columns =  input_var# list of input variables you are interested in processing\n",
+    "    out_var = output_var # output variable that you are interested in ---> Set1 only\n",
+    "    \n",
     "    df = pd.DataFrame(columns = columns)\n",
-    " \n",
     "\n",
     "    for col in columns: \n",
     "        \n",
@@ -215,27 +219,65 @@
     "        country_timeseries = np.nanmean(np.nanmean(country_masked_data,axis=2),axis=1)\n",
     "        \n",
     "        df[col] = country_timeseries\n",
-    "                \n",
-    "    hours_total = load_1d_data(data_dir, filename, 'time')\n",
-    "    hour, week, year = calc_time(hours_total)\n",
+    "               \n",
+    "    '''\n",
+    "    Uncomment the next 4 lines only if you want to convert the time column into \n",
+    "        weeks number and year and include in your dataset\n",
+    "    ''' \n",
     "    \n",
-    "    #df['hour'] = hour\n",
-    "    df['week'] = week\n",
-    "    df['year'] = year\n",
-    "    df['wind10'] = np.sqrt(df['u10']**2 + df['v10']**2)\n",
-    "    df['wind100'] = np.sqrt(df['u100']**2 + df['v100']**2)\n",
-    "\n",
+    "    #hours_total = load_1d_data(data_dir, filename, 'time')\n",
+    "    #hour, week, year = calc_time(hours_total)\n",
+    "    #df['week'] = week\n",
+    "    #df['year'] = year\n",
+    "    \n",
+    "    '''\n",
+    "    Uncomment the next 2 lines only if you want to convert u,v to wind speed magnitude\n",
+    "    \n",
+    "    ---> Set 1 only\n",
+    "    '''\n",
+    "    \n",
+    "    # df['wind10'] = np.sqrt(df['u10']**2 + df['v10']**2)\n",
+    "    # df['wind100'] = np.sqrt(df['u100']**2 + df['v100']**2)\n",
+    "    \n",
+    "    '''\n",
+    "    Input features are averaged to get daily values\n",
+    "    '''\n",
     "    X = df.groupby(np.arange(len(df))//24).mean()\n",
     "\n",
-    "    Y = pd.DataFrame()\n",
-    "    for idx, df_daily in enumerate(np.array_split(df,  24)):\n",
-    "        Y[idx] = df_daily['t2m'].values\n",
-    "    return(X, Y)\n"
+    "    '''\n",
+    "    Uncomment the next 4 lines if you also want to compute the output dataframe.\n",
+    "    24 output features need to be collected in Y\n",
+    "    We store the hourly values of the output variable into rows\n",
+    "    Each row is a day\n",
+    "    Each column is an hour\n",
+    "    \n",
+    "    ---> Set1 only\n",
+    "    '''\n",
+    "\n",
+    "    #Y = pd.DataFrame()\n",
+    "    #for idx, df in enumerate(np.array_split(df,  24)):\n",
+    "    #    Y[idx] = df[out_var].values\n",
+    "    # return(X, Y)\n",
+    "    \n",
+    "    return X\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# user input\n",
+    "data_dir = '/gws/pw/j05/cop26_hackathons/oxford/Data/ERA5_data_EU_domain/field_set_2/'\n",
+    "set_name = 'set_2'\n",
+    "inputs = ['tcc', 'tp']\n",
+    "output = 't2m'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -247,14 +289,14 @@
     }
    ],
    "source": [
-    "data_dir = '/gws/pw/j05/cop26_hackathons/oxford/Data/ERA5_data_EU_domain/field_set_1/'\n",
-    "filename = 'ERA5_1hr_field_set_1_2000_01.nc'\n",
-    "country_mask = load_country_mask('United Kingdom', data_dir, filename)\n"
+    "# filename is only used for the country mask, so doesn't matter which year/ lat/ lon\n",
+    "filename = 'ERA5_1hr_field_%s_2000_01.nc'%set_name\n",
+    "country_mask = load_country_mask('United Kingdom', data_dir, filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +310,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/jaspy/lib/python3.7/site-packages/ipykernel_launcher.py:45: RuntimeWarning: Mean of empty slice\n"
+      "/opt/jaspy/lib/python3.7/site-packages/ipykernel_launcher.py:42: RuntimeWarning: Mean of empty slice\n"
      ]
     },
     {
@@ -299,32 +341,50 @@
     }
    ],
    "source": [
-    "# WARNING: takes AGES to compute.\n",
+    "# WARNING: takes a long time to compute.\n",
     "\n",
     "years = np.arange(1980, 2001, 1)\n",
     "X = pd.DataFrame()\n",
     "Y = pd.DataFrame()\n",
     "\n",
     "for year in years:\n",
-    "    print(year)\n",
+    "    print(year) # to see the progres of the loop\n",
     "    for month in np.arange(1, 13, 1):\n",
     "        if X.empty and Y.empty:\n",
-    "            X, Y = load_daily_national_data(data_dir,'ERA5_1hr_field_set_1_%d_%02d.nc'%(year, month), country_mask)\n",
+    "        #if X.empty:\n",
+    "            X, Y = load_daily_national_data(data_dir,'ERA5_1hr_field_%s_%d_%02d.nc'%(set_name, year, month), country_mask)\n",
+    "            #X = load_daily_national_data(data_dir,'ERA5_1hr_field_set_2_%d_%02d.nc'%(year, month), country_mask)\n",
     "        else:\n",
-    "            df1, df2 = load_daily_national_data(data_dir,'ERA5_1hr_field_set_1_%d_%02d.nc'%(year, month), country_mask)\n",
+    "            df1, df2 = load_daily_national_data(data_dir,'ERA5_1hr_field_%s_%d_%02d.nc'%(set_name, year, month), country_mask)\n",
+    "            #df1 = load_daily_national_data(data_dir,'ERA5_1hr_field_set_2_%d_%02d.nc'%(year, month), country_mask)\n",
     "            X = X.append(df1, ignore_index = True)\n",
     "            Y = Y.append(df2, ignore_index = True)\n",
-    "            \n"
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' \\nsave the dataframes to a file \\n'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "X.to_csv('X.dat')\n",
-    "Y.to_csv('Y.dat')"
+    "''' \n",
+    "save the dataframes to a file \n",
+    "'''\n",
+    "\n",
+    "#X.to_csv('_set2.dat')\n",
+    "#Y.to_csv('_wind10.dat')"
    ]
   },
   {
