tried adding nao data but it still needs to be converted to daily values (currently monthly)

--- a/pre-processor.ipynb
+++ b/pre-processor.ipynb
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_time(hours):\n",
+    "def calc_time(hours, start_year = 1900):\n",
     "    \n",
     "    '''\n",
     "    \n",
@@ -37,7 +37,7 @@
     "        \n",
     "    '''\n",
     "    \n",
-    "    start_date = datetime.date(1900, 1, 1)\n",
+    "    start_date = datetime.date(start_year, 1, 1)\n",
     "    hour, week, year = [], [], []\n",
     "    \n",
     "    for hr in hours:\n",
@@ -385,6 +385,35 @@
     "\n",
     "#X.to_csv('_set2.dat')\n",
     "#Y.to_csv('_wind10.dat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# trying to add the nao data from https://www.ncdc.noaa.gov/teleconnections/nao/ but it is monthly.\n",
+    "# need to find a way to correctly repeat the rows to have daily values. \n",
+    "# probably need to hardcode the number of days each month ? check the python datetime module\n",
+    "\n",
+    "filename = 'nao.csv'\n",
+    "df_nao = pd.read_csv(filename, header = 1, index_col = None)\n",
+    "df_nao = df_nao.astype(str)\n",
+    "\n",
+    "df_nao['year'] = df_nao['Date'].str[:4]\n",
+    "df_nao['month'] = df_nao['Date'].str[4:]\n",
+    "df_nao.drop(columns = ['Date'], inplace = True)\n",
+    "df_nao = df_nao.astype(float)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nao = df_nao.loc[df_nao['year'].isin(np.arange(1980, 2021))]\n"
    ]
   },
   {
