--- a/read_in_nc_and_country_mask_ALL_YEARS_generate_csv_file.ipynb
+++ b/read_in_nc_and_country_mask_ALL_YEARS_generate_csv_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,11 +164,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found country\n",
+      "(744, 149, 229)\n"
+     ]
+    }
+   ],
+   "source": [
+    "country_mask = load_country_mask('United Kingdom','/gws/pw/j05/cop26_hackathons/oxford/Data/ERA5_data_EU_domain/field_set_1/','ERA5_1hr_field_set_1_2018_01.nc','t2m')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_variable_data(var):\n",
+    "def load_variable_data(var,field_set_num):\n",
     "\n",
     "    ''' \n",
     "    This function collects the specified variable data for the UK from 1979-2020 on an hourly basis.\n",
@@ -178,6 +196,8 @@
     "    Args:\n",
     "        \n",
     "    var (str): the name of the variable in the netCDF to collect (ex: t2m, ssrd, etc) \n",
+    "    \n",
+    "    field_set_num (str): which directory contains the weather variable fields\n",
     "    \n",
     "    Returns:\n",
     "    \n",
@@ -196,7 +216,7 @@
     "            qmonthchar = str(qmonth).zfill(2)\n",
     "            qyearchar = str(qyear)\n",
     "\n",
-    "            file_loc = '/gws/pw/j05/cop26_hackathons/oxford/Data/ERA5_data_EU_domain/field_set_1/'\n",
+    "            file_loc = f'/gws/pw/j05/cop26_hackathons/oxford/Data/ERA5_data_EU_domain/field_set_{field_set_num}/'\n",
     "            file_name = 'ERA5_1hr_field_set_1_' + qyearchar + '_' + qmonthchar + '.nc' \n",
     "\n",
     "            var_data,lats,lons =load_country_weather_data(country_mask,file_loc,file_name,var)\n",
@@ -218,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -236,188 +256,34 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1980\n",
-      "1981\n",
-      "1982\n",
-      "1983\n",
-      "1984\n",
-      "1985\n",
-      "1986\n",
-      "1987\n",
-      "1988\n",
-      "1989\n",
-      "1990\n",
-      "1991\n",
-      "1992\n",
-      "1993\n",
-      "1994\n",
-      "1995\n",
-      "1996\n",
-      "1997\n",
-      "1998\n",
-      "1999\n",
-      "2000\n",
-      "2001\n",
-      "2002\n",
-      "2003\n",
-      "2004\n",
-      "2005\n",
-      "2006\n",
-      "2007\n",
-      "2008\n",
-      "2009\n",
-      "2010\n",
-      "2011\n",
-      "2012\n",
-      "2013\n",
-      "2014\n",
-      "2015\n",
-      "2016\n",
-      "2017\n",
-      "2018\n",
-      "2019\n",
-      "2020\n",
-      "1979\n",
-      "1980\n",
-      "1981\n",
-      "1982\n",
-      "1983\n",
-      "1984\n",
-      "1985\n",
-      "1986\n",
-      "1987\n",
-      "1988\n",
-      "1989\n",
-      "1990\n",
-      "1991\n",
-      "1992\n",
-      "1993\n",
-      "1994\n",
-      "1995\n",
-      "1996\n",
-      "1997\n",
-      "1998\n",
-      "1999\n",
-      "2000\n",
-      "2001\n",
-      "2002\n",
-      "2003\n",
-      "2004\n",
-      "2005\n",
-      "2006\n",
-      "2007\n",
-      "2008\n",
-      "2009\n",
-      "2010\n",
-      "2011\n",
-      "2012\n",
-      "2013\n",
-      "2014\n",
-      "2015\n",
-      "2016\n",
-      "2017\n",
-      "2018\n",
-      "2019\n",
-      "2020\n",
-      "1979\n",
-      "1980\n",
-      "1981\n",
-      "1982\n",
-      "1983\n",
-      "1984\n",
-      "1985\n",
-      "1986\n",
-      "1987\n",
-      "1988\n",
-      "1989\n",
-      "1990\n",
-      "1991\n",
-      "1992\n",
-      "1993\n",
-      "1994\n",
-      "1995\n",
-      "1996\n",
-      "1997\n",
-      "1998\n",
-      "1999\n",
-      "2000\n",
-      "2001\n",
-      "2002\n",
-      "2003\n",
-      "2004\n",
-      "2005\n",
-      "2006\n",
-      "2007\n",
-      "2008\n",
-      "2009\n",
-      "2010\n",
-      "2011\n",
-      "2012\n",
-      "2013\n",
-      "2014\n",
-      "2015\n",
-      "2016\n",
-      "2017\n",
-      "2018\n",
-      "2019\n",
-      "2020\n",
-      "1979\n",
-      "1980\n",
-      "1981\n",
-      "1982\n",
-      "1983\n",
-      "1984\n",
-      "1985\n",
-      "1986\n",
-      "1987\n",
-      "1988\n",
-      "1989\n",
-      "1990\n",
-      "1991\n",
-      "1992\n",
-      "1993\n",
-      "1994\n",
-      "1995\n",
-      "1996\n",
-      "1997\n",
-      "1998\n",
-      "1999\n",
-      "2000\n",
-      "2001\n",
-      "2002\n",
-      "2003\n",
-      "2004\n",
-      "2005\n",
-      "2006\n",
-      "2007\n",
-      "2008\n",
-      "2009\n",
-      "2010\n",
-      "2011\n",
-      "2012\n",
-      "2013\n",
-      "2014\n",
-      "2015\n",
-      "2016\n",
-      "2017\n",
-      "2018\n",
-      "2019\n",
-      "2020\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-74b5a455fb8d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mERA5_u100_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_variable_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"u100\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m ERA5_v100_data = load_variable_data(\"v100\")'''\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mERA5_v100_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_variable_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"v100\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"1\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;31m#ERA5_cc_data = load_variable_data(\"u100\",\"3\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m#ERA5_precip_data = load_variable_data(\"v100\",\"2\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-9-6bc388f9f4d0>\u001b[0m in \u001b[0;36mload_variable_data\u001b[0;34m(var, field_set_num)\u001b[0m\n\u001b[1;32m     32\u001b[0m             \u001b[0mfile_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'ERA5_1hr_field_set_1_'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mqyearchar\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'_'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mqmonthchar\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.nc'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m             \u001b[0mvar_data\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlats\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlons\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mload_country_weather_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcountry_mask\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfile_loc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfile_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m             \u001b[0maggregate_var\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvar_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-56ba78052214>\u001b[0m in \u001b[0;36mload_country_weather_data\u001b[0;34m(MASK_MATRIX_RESHAPE, data_dir, filename, nc_key)\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0mcountry_masked_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcountry_masked_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m         \u001b[0mcountry_masked_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mMASK_MATRIX_RESHAPE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mcountry_masked_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcountry_masked_data\u001b[0m \u001b[0;34m==\u001b[0m\u001b[0;36m0.\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.7/site-packages/numpy/ma/core.py\u001b[0m in \u001b[0;36m__mul__\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m   4167\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_delegate_binop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4168\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mNotImplemented\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4169\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4170\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4171\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__rmul__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.7/site-packages/numpy/ma/core.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, a, b, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1019\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrstate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1020\u001b[0m             \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseterr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdivide\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ignore'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minvalid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ignore'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1021\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mda\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1022\u001b[0m         \u001b[0;31m# Get the mask for the result\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1023\u001b[0m         \u001b[0;34m(\u001b[0m\u001b[0mma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mgetmask\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgetmask\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
+    "\n",
     "# collect all the variables of interest from the ERA5 data\n",
-    "ERA5_ssrd_data = load_variable_data(\"ssrd\")\n",
-    "ERA5_msl_data = load_variable_data(\"msl\")\n",
-    "ERA5_t2m_data = load_variable_data(\"t2m\")\n",
-    "ERA5_u10_data = load_variable_data(\"u10\")\n",
-    "ERA5_v10_data = load_variable_data(\"v10\")\n",
-    "ERA5_u100_data = load_variable_data(\"u100\")\n",
-    "ERA5_v100_data = load_variable_data(\"v100\")"
+    "#ERA5_ssrd_data = load_variable_data(\"ssrd\")\n",
+    "#ERA5_msl_data = load_variable_data(\"msl\")\n",
+    "#ERA5_t2m_data = load_variable_data(\"t2m\")\n",
+    "#ERA5_u10_data = load_variable_data(\"u10\")\n",
+    "#ERA5_v10_data = load_variable_data(\"v10\")\n",
+    "#ERA5_u100_data = load_variable_data(\"u100\")\n",
+    "#ERA5_v100_data = load_variable_data(\"v100\")\n",
+    "#ERA5_v100_data = load_variable_data(\"v100\",\"1\")\n",
+    "ERA5_cc_data = load_variable_data(\"u100\",\"3\")\n",
+    "ERA5_precip_data = load_variable_data(\"v100\",\"2\")"
    ]
   },
   {
