cleaning the directory

--- a/t2m_modeling.ipynb
+++ b/t2m_modeling.ipynb
@@ -155,141 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>t2m</th>\n",
-       "      <th>ssrd</th>\n",
-       "      <th>msl</th>\n",
-       "      <th>nao</th>\n",
-       "      <th>w10</th>\n",
-       "      <th>w100</th>\n",
-       "      <th>week</th>\n",
-       "      <th>t2mmax</th>\n",
-       "      <th>t2mmin</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date_time</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1979-01-01</th>\n",
-       "      <td>-4.159642</td>\n",
-       "      <td>-9531.855820</td>\n",
-       "      <td>1018.727490</td>\n",
-       "      <td>-1.38</td>\n",
-       "      <td>1.642102</td>\n",
-       "      <td>3.302241</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-2.207358</td>\n",
-       "      <td>-5.952020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1979-01-02</th>\n",
-       "      <td>-1.011778</td>\n",
-       "      <td>25.708586</td>\n",
-       "      <td>1022.629712</td>\n",
-       "      <td>-1.38</td>\n",
-       "      <td>2.915822</td>\n",
-       "      <td>4.989152</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.282814</td>\n",
-       "      <td>-2.470000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1979-01-03</th>\n",
-       "      <td>-0.129076</td>\n",
-       "      <td>25.569494</td>\n",
-       "      <td>1013.880059</td>\n",
-       "      <td>-1.38</td>\n",
-       "      <td>4.747445</td>\n",
-       "      <td>7.739491</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.041230</td>\n",
-       "      <td>-1.418395</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1979-01-04</th>\n",
-       "      <td>-0.641538</td>\n",
-       "      <td>20.183029</td>\n",
-       "      <td>1011.304354</td>\n",
-       "      <td>-1.38</td>\n",
-       "      <td>3.155913</td>\n",
-       "      <td>5.060900</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.469106</td>\n",
-       "      <td>-2.098208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1979-01-05</th>\n",
-       "      <td>-2.196899</td>\n",
-       "      <td>25.340972</td>\n",
-       "      <td>1021.575488</td>\n",
-       "      <td>-1.38</td>\n",
-       "      <td>2.858333</td>\n",
-       "      <td>4.329928</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.880194</td>\n",
-       "      <td>-4.261743</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 t2m         ssrd          msl   nao       w10      w100  \\\n",
-       "date_time                                                                  \n",
-       "1979-01-01 -4.159642 -9531.855820  1018.727490 -1.38  1.642102  3.302241   \n",
-       "1979-01-02 -1.011778    25.708586  1022.629712 -1.38  2.915822  4.989152   \n",
-       "1979-01-03 -0.129076    25.569494  1013.880059 -1.38  4.747445  7.739491   \n",
-       "1979-01-04 -0.641538    20.183029  1011.304354 -1.38  3.155913  5.060900   \n",
-       "1979-01-05 -2.196899    25.340972  1021.575488 -1.38  2.858333  4.329928   \n",
-       "\n",
-       "            week    t2mmax    t2mmin  \n",
-       "date_time                             \n",
-       "1979-01-01     0 -2.207358 -5.952020  \n",
-       "1979-01-02     0  0.282814 -2.470000  \n",
-       "1979-01-03     0  1.041230 -1.418395  \n",
-       "1979-01-04     0  0.469106 -2.098208  \n",
-       "1979-01-05     0 -0.880194 -4.261743  "
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# calculate daily values\n",
     "df.date_time = pd.to_datetime(df.date_time)\n",
@@ -298,13 +166,12 @@
     "df_daily[\"t2mmin\"] = df.t2m.groupby(df.date_time.dt.date).min()\n",
     "\n",
     "# set X equal to df_daily\n",
-    "X = df_daily\n",
-    "X.head()"
+    "X = df_daily"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,8 +182,7 @@
     "Y = np.array(Y_list)\n",
     "\n",
     "# add date_time index\n",
-    "y = pd.DataFrame(Y,index=df_daily.index)\n",
-    "\n"
+    "y = pd.DataFrame(Y,index=df_daily.index)"
    ]
   },
   {
