--- a/read_in_nc_and_country_mask_ALL_YEARS_generate_csv_file.ipynb
+++ b/read_in_nc_and_country_mask_ALL_YEARS_generate_csv_file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
     "            qyearchar = str(qyear)\n",
     "\n",
     "            file_loc = f'/gws/pw/j05/cop26_hackathons/oxford/Data/ERA5_data_EU_domain/field_set_{field_set_num}/'\n",
-    "            file_name = 'ERA5_1hr_field_set_1_' + qyearchar + '_' + qmonthchar + '.nc' \n",
+    "            file_name = f'ERA5_1hr_field_set_{field_set_num}_' + qyearchar + '_' + qmonthchar + '.nc' \n",
     "\n",
     "            var_data,lats,lons =load_country_weather_data(country_mask,file_loc,file_name,var)\n",
     "\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -256,34 +256,192 @@
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-74b5a455fb8d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mERA5_u100_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_variable_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"u100\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m ERA5_v100_data = load_variable_data(\"v100\")'''\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mERA5_v100_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_variable_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"v100\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"1\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;31m#ERA5_cc_data = load_variable_data(\"u100\",\"3\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m#ERA5_precip_data = load_variable_data(\"v100\",\"2\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-9-6bc388f9f4d0>\u001b[0m in \u001b[0;36mload_variable_data\u001b[0;34m(var, field_set_num)\u001b[0m\n\u001b[1;32m     32\u001b[0m             \u001b[0mfile_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'ERA5_1hr_field_set_1_'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mqyearchar\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'_'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mqmonthchar\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.nc'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m             \u001b[0mvar_data\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlats\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlons\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mload_country_weather_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcountry_mask\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfile_loc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfile_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m             \u001b[0maggregate_var\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvar_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-2-56ba78052214>\u001b[0m in \u001b[0;36mload_country_weather_data\u001b[0;34m(MASK_MATRIX_RESHAPE, data_dir, filename, nc_key)\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0mcountry_masked_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcountry_masked_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m         \u001b[0mcountry_masked_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mMASK_MATRIX_RESHAPE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mcountry_masked_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcountry_masked_data\u001b[0m \u001b[0;34m==\u001b[0m\u001b[0;36m0.\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.7/site-packages/numpy/ma/core.py\u001b[0m in \u001b[0;36m__mul__\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m   4167\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_delegate_binop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4168\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mNotImplemented\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4169\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4170\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4171\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__rmul__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.7/site-packages/numpy/ma/core.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, a, b, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1019\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrstate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1020\u001b[0m             \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseterr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdivide\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ignore'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minvalid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ignore'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1021\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mda\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1022\u001b[0m         \u001b[0;31m# Get the mask for the result\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1023\u001b[0m         \u001b[0;34m(\u001b[0m\u001b[0mma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mgetmask\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgetmask\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1980\n",
+      "1981\n",
+      "1982\n",
+      "1983\n",
+      "1984\n",
+      "1985\n",
+      "1986\n",
+      "1987\n",
+      "1988\n",
+      "1989\n",
+      "1990\n",
+      "1991\n",
+      "1992\n",
+      "1993\n",
+      "1994\n",
+      "1995\n",
+      "1996\n",
+      "1997\n",
+      "1998\n",
+      "1999\n",
+      "2000\n",
+      "2001\n",
+      "2002\n",
+      "2003\n",
+      "2004\n",
+      "2005\n",
+      "2006\n",
+      "2007\n",
+      "2008\n",
+      "2009\n",
+      "2010\n",
+      "2011\n",
+      "2012\n",
+      "2013\n",
+      "2014\n",
+      "2015\n",
+      "2016\n",
+      "2017\n",
+      "2018\n",
+      "2019\n",
+      "2020\n",
+      "1979\n",
+      "1980\n",
+      "1981\n",
+      "1982\n",
+      "1983\n",
+      "1984\n",
+      "1985\n",
+      "1986\n",
+      "1987\n",
+      "1988\n",
+      "1989\n",
+      "1990\n",
+      "1991\n",
+      "1992\n",
+      "1993\n",
+      "1994\n",
+      "1995\n",
+      "1996\n",
+      "1997\n",
+      "1998\n",
+      "1999\n",
+      "2000\n",
+      "2001\n",
+      "2002\n",
+      "2003\n",
+      "2004\n",
+      "2005\n",
+      "2006\n",
+      "2007\n",
+      "2008\n",
+      "2009\n",
+      "2010\n",
+      "2011\n",
+      "2012\n",
+      "2013\n",
+      "2014\n",
+      "2015\n",
+      "2016\n",
+      "2017\n",
+      "2018\n",
+      "2019\n",
+      "2020\n",
+      "1979\n",
+      "1980\n",
+      "1981\n",
+      "1982\n",
+      "1983\n",
+      "1984\n",
+      "1985\n",
+      "1986\n",
+      "1987\n",
+      "1988\n",
+      "1989\n",
+      "1990\n",
+      "1991\n",
+      "1992\n",
+      "1993\n",
+      "1994\n",
+      "1995\n",
+      "1996\n",
+      "1997\n",
+      "1998\n",
+      "1999\n",
+      "2000\n",
+      "2001\n",
+      "2002\n",
+      "2003\n",
+      "2004\n",
+      "2005\n",
+      "2006\n",
+      "2007\n",
+      "2008\n",
+      "2009\n",
+      "2010\n",
+      "2011\n",
+      "2012\n",
+      "2013\n",
+      "2014\n",
+      "2015\n",
+      "2016\n",
+      "2017\n",
+      "2018\n",
+      "2019\n",
+      "2020\n",
+      "1979\n",
+      "1980\n",
+      "1981\n",
+      "1982\n",
+      "1983\n",
+      "1984\n",
+      "1985\n",
+      "1986\n",
+      "1987\n",
+      "1988\n",
+      "1989\n",
+      "1990\n",
+      "1991\n",
+      "1992\n",
+      "1993\n",
+      "1994\n",
+      "1995\n",
+      "1996\n",
+      "1997\n",
+      "1998\n",
+      "1999\n",
+      "2000\n",
+      "2001\n",
+      "2002\n",
+      "2003\n",
+      "2004\n",
+      "2005\n",
+      "2006\n",
+      "2007\n",
+      "2008\n",
+      "2009\n",
+      "2010\n",
+      "2011\n",
+      "2012\n",
+      "2013\n",
+      "2014\n",
+      "2015\n",
+      "2016\n",
+      "2017\n",
+      "2018\n",
+      "2019\n",
+      "2020\n"
      ]
     }
    ],
    "source": [
     "\n",
     "# collect all the variables of interest from the ERA5 data\n",
-    "#ERA5_ssrd_data = load_variable_data(\"ssrd\")\n",
-    "#ERA5_msl_data = load_variable_data(\"msl\")\n",
-    "#ERA5_t2m_data = load_variable_data(\"t2m\")\n",
-    "#ERA5_u10_data = load_variable_data(\"u10\")\n",
-    "#ERA5_v10_data = load_variable_data(\"v10\")\n",
-    "#ERA5_u100_data = load_variable_data(\"u100\")\n",
-    "#ERA5_v100_data = load_variable_data(\"v100\")\n",
-    "#ERA5_v100_data = load_variable_data(\"v100\",\"1\")\n",
-    "ERA5_cc_data = load_variable_data(\"u100\",\"3\")\n",
-    "ERA5_precip_data = load_variable_data(\"v100\",\"2\")"
+    "ERA5_ssrd_data = load_variable_data(\"ssrd\",\"1\")\n",
+    "ERA5_msl_data = load_variable_data(\"msl\",\"1\")\n",
+    "ERA5_t2m_data = load_variable_data(\"t2m\",\"1\")\n",
+    "ERA5_u10_data = load_variable_data(\"u10\",\"1\")\n",
+    "ERA5_v10_data = load_variable_data(\"v10\",\"1\")\n",
+    "ERA5_u100_data = load_variable_data(\"u100\",\"1\")\n",
+    "ERA5_v100_data = load_variable_data(\"v100\",\"1\")\n",
+    "ERA5_v100_data = load_variable_data(\"v100\",\"1\")\n",
+    "ERA5_tcc_data = load_variable_data(\"tcc\",\"2\")\n",
+    "ERA5_tp_data = load_variable_data(\"tp\",\"2\")"
    ]
   },
   {
@@ -295,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -304,6 +462,17 @@
      "text": [
       "(368184,)\n"
      ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'ERA5_t2m_hourly' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-e3c97434fe20>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m# array lengths do not match. Because leap year days are not accounted for.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhours\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mERA5_t2m_hourly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'ERA5_t2m_hourly' is not defined"
+     ]
     }
    ],
    "source": [
@@ -311,6 +480,8 @@
     "ERA5_t2m_hourly = ERA5_t2m_data.flatten()\n",
     "ERA5_ssrd_hourly = ERA5_ssrd_data.flatten()\n",
     "ERA5_msl_hourly = ERA5_msl_data.flatten()/100\n",
+    "ERA5_tcc_hourly = ERA5_tcc_data.flatten()\n",
+    "ERA5_tp_hourly = ERA5_tp_data.flatten() * 1000  # convert from meters to mm\n",
     "\n",
     "# calculate wind speeds & flatten\n",
     "ERA5_w10_data = np.sqrt(ERA5_u10_data**2 + ERA5_v10_data**2)\n",
@@ -328,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -338,18 +509,22 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-f211db39737d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# lengths match now\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mERA5_t2m_hourly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mERA5_t2m_hours\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-48-013cb7543fa1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# lengths match now\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mERA5_t2m_hourly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mERA5_t2m_hours\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'ERA5_t2m_hourly' is not defined"
      ]
     }
    ],
    "source": [
     "# remove all Feb 29 days from hourly values\n",
-    "ERA5_t2m_hours = hours[hours.strftime(\"%m%d\") != \"0229\"]\n",
-    "ERA5_ssrd_hours = hours[hours.strftime(\"%m%d\") != \"0229\"]\n",
-    "ERA5_msl_hours = hours[hours.strftime(\"%m%d\") != \"0229\"]\n",
-    "ERA5_w10_hours = hours[hours.strftime(\"%m%d\") != \"0229\"]\n",
-    "ERA5_w100_hours = hours[hours.strftime(\"%m%d\") != \"0229\"]\n",
+    "#ERA5_t2m_hours = hours[hours.strftime(\"%m%d\") != \"0229\"]\n",
+    "#ERA5_ssrd_hours = hours[hours.strftime(\"%m%d\") != \"0229\"]\n",
+    "#ERA5_msl_hours = hours[hours.strftime(\"%m%d\") != \"0229\"]\n",
+    "#ERA5_w10_hours = hours[hours.strftime(\"%m%d\") != \"0229\"]\n",
+    "#ERA5_w100_hours = hours[hours.strftime(\"%m%d\") != \"0229\"]\n",
+    "ERA5_mx2t_hours = hours[hours.strftime(\"%m%d\") != \"0229\"]\n",
+    "ERA5_mn2t_hours = hours[hours.strftime(\"%m%d\") != \"0229\"]\n",
+    "ERA5_tcc_hours = hours[hours.strftime(\"%m%d\") != \"0229\"]\n",
+    "ERA5_tp_hours = hours[hours.strftime(\"%m%d\") != \"0229\"]\n",
     "\n",
     "# lengths match now\n",
     "print(ERA5_t2m_hourly.shape)\n",
@@ -358,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,20 +565,13 @@
    "outputs": [],
    "source": [
     "# create dataframe\n",
-    "df = pd.DataFrame({\"t2m\":ERA5_t2m_hourly, \"ssrd\":ERA5_ssrd_hourly, \"msl\":ERA5_msl_hourly,\"w10\":ERA5_w10_hourly,\n",
-    "                   \"w100\":ERA5_w100_hourly,\"nao\":hourly_nao_value})\n",
+    "df = pd.DataFrame({\"t2m\":ERA5_t2m_hourly,\"ssrd\":ERA5_ssrd_hourly, \"msl\":ERA5_msl_hourly,\"w10\":ERA5_w10_hourly,\n",
+    "                   \"w100\":ERA5_w100_hourly,\"tcc\":ERA5_tcc_hourly,\"tp\":ERA5_tp_hourly,\"nao\":hourly_nao_value})\n",
     "df.index = ERA5_t2m_hours\n",
     "\n",
     "# produce CSV\n",
-    "df.to_csv(\"country_data/ERA5_t2m_hourly_UK.csv\")"
+    "df.to_csv(\"country_data/ERA5_hourly_UK.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
