--- a/ssrd_final.ipynb
+++ b/ssrd_final.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wind speed estimation\n"
+    "# RSDS estimation\n"
    ]
   },
   {
